Replace deprecated new URL(String) usage
It's deprecated since JDK 20